debugging author and user ( repo/service)

--- a/.env
+++ b/.env
@@ -3,3 +3,11 @@ DB_PASSWORD=password
 DB_HOST=localhost
 DB_PORT=5432 
 DB_NAME=ebook
+
+## To Load Env from terminal
+
+# $env:DB_USER = "postgres"
+# $env:DB_PASSWORD = "password"
+# $env:DB_HOST = "localhost"
+# $env:DB_PORT = "5432"
+# $env:DB_NAME = "ebook"
