--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ DB_NAME=ebook
 
 ## To Load Env from terminal
 
-$env:DB_USER = "postgres"
-$env:DB_PASSWORD = "password"
-$env:DB_HOST = "localhost"
-$env:DB_PORT = "5432"
-$env:DB_NAME = "ebook"
+# $env:DB_USER = "postgres"
+# $env:DB_PASSWORD = "password"
+# $env:DB_HOST = "localhost"
+# $env:DB_PORT = "5432"
+# $env:DB_NAME = "ebook"
